--- a/CaltrainWidgetExtension.entitlements
+++ b/CaltrainWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.net.fewald.realtime-caltrain</string>
+		<string>group.net.fewald.caltrain</string>
 	</array>
 </dict>
 </plist>
