--- a/Config.xcconfig
+++ b/Config.xcconfig
@@ -7,3 +7,6 @@
 
 // Configuration settings file format documentation can be found at:
 // https://developer.apple.com/documentation/xcode/adding-a-build-configuration-file-to-your-project
+
+VERSION = 1.2.0
+BUILD_NUMBER = 1
